# reddit-consume

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: nix.yaml
src/: lemmy_cli.rs  main.rs  reddit.rs  reddit_cli.rs
