[package]
name = "reddit-consume"
version = "0.1.1-rc.2"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool for viewing content from reddit in mpv"
readme = "README.md"
repository = "https://github.com/wucke13/reddit-consume"


[dependencies]
anyhow = "1"
casey = "0.3"
clap = { version = "4", features = ["derive"] }
mpvipc = "1"
roux = "2"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
